Fixed video height on small layouts

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,6 +37,9 @@
     --padding-lg: 3.5rem;
     --padding-xl: 5rem;
     --bg-image: url('../img/bw-spheres.jpg');
+    --breakpoint-tablet: 1000px;
+    --breakpoint-phone: 768px;
+    --breakpoint-sm: 500px;
 }
 
 @layer third_party, reset, base, specific, responsive, utility;
@@ -909,18 +912,9 @@
         height: var(--header-height);
         width: 100%;
         z-index: 1000;
-    }
-
-    .navbar-gradient-blur {
-        height: 100px;
-        left: 0;
-        mask: linear-gradient(oklch(0 0 0), oklch(0 0 0 / 0.8) 50%, transparent);
-        background-color: var(--darkest-bg);
-        pointer-events: none !important;
-        position: absolute;
-        top: 0;
-        width: 100%;
-        z-index: -1;
+        mask: linear-gradient(oklch(0 0 0), oklch(0 0 0 / 0.8) 40%, transparent);
+        background-color: oklch(0.87 0.1 209.18 / 0.09);
+        backdrop-filter: blur(20px);
     }
 
     .navbar-text {
@@ -1475,6 +1469,10 @@
                         margin: var(--padding);
                         border-radius: var(--br-lg);
                         border: none;
+
+                        @media (max-width: 768px) {
+                            height: 300px;
+                        }
                     }
                 }
             }
@@ -1513,11 +1511,6 @@
     }
 
     @media (max-width: 768px) {
-        .work-featured-video {
-            height: 350px;
-            margin: var(--padding-sm);
-        }
-
         /* Disable hover effects on mobile/tablet */
         .card-bfx .card-title.primary {
             transform: translateY(50%) !important;
